[package]
name = "ffxv"
version = "0.1.0"
authors = ["Sebastian"]
edition = "2018"
build = "build.rs"

[dependencies]
memory-rs = { git = "https://github.com/etra0/memory-rs/" }
common = { path = "../common" }
winapi = { version = "0.3.8", features = ["winuser", "impl-default", "xinput"] }

[build-dependencies]
winres = "0.1"
cc = "1.0"

[[bin]]
name = "ffxv-freecam"
path = "src/main.rs"
